# helloloop

./: .gitignore  Cargo.toml  README.md  package.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: publish.yml
.helloagents/: CHANGELOG.md
apps/hello-app/: README.md
apps/hello-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/hello-app/src-tauri/capabilities/: default.json
apps/hello-app/src-tauri/src/: main.rs  shell_support.rs
apps/hello-app/web/: app-components.css  app-forms.css  app-http.js  app-i18n.js  app-layout.css  app-locales-en.js  app-locales-zh.js  app-render-cards.js  app-render-parts.js  app-render-views.js  app.css  (+13 more)
apps/hello-cli/: Cargo.toml
apps/hello-cli/src/: api.rs  command_exec.rs  command_options.rs  command_support.rs  commands.rs  main.rs  state_commands.rs
apps/hello-daemon/: Cargo.toml
apps/hello-daemon/src/: main.rs
crates/helloloop-api/: Cargo.toml
crates/helloloop-api/src/: control.rs  frontend.rs  lib.rs  session_actions.rs  session_detail.rs  settings.rs  workspaces.rs
crates/helloloop-domain/: Cargo.toml
crates/helloloop-host-claude/: Cargo.toml
crates/helloloop-host-codex/: Cargo.toml
crates/helloloop-host-gemini/: Cargo.toml
crates/helloloop-runtime/: Cargo.toml
crates/helloloop-runtime/src/: control_launch.rs  daemon_endpoint.rs  lib.rs
crates/helloloop-scheduler/: Cargo.toml
crates/helloloop-store/: Cargo.toml
crates/helloloop-store/src/: lib.rs  settings_store.rs  workspace_store.rs
docs/: README.md  app-first-product-strategy.md  hello-app-blueprint.md  hello-app-phase1-implementation.md  hello-app-vs-cli-decision.md  hello-cli-positioning-and-feasibility.md  hierarchical-role-based-agile-multi-agent-sdlc.md  install.md  multi-cli-architecture.md  multi-cli-tasks.md  plugin-standard.md  rust-core-rewrite-recommendation.md  rust-rewrite-evaluation-brief.md
legacy/node-runtime/: README.md
native/windows-hidden-shell-proxy/: HelloLoopHiddenShellProxy.csproj  Program.cs
scripts/: hello-app-workspace-snapshot.mjs  install-home-plugin.ps1  sync-local-plugin.ps1  uninstall-home-plugin.ps1
skills/autoloop/: SKILL.md
skills/helloloop/: SKILL.md
src/: activity_projection.mjs  analyze_confirmation.mjs  analyze_prompt.mjs  analyze_user_input.mjs  analyzer.mjs  analyzer_support.mjs  auto_execution_options.mjs  background_launch.mjs  backlog.mjs  cli.mjs  cli_analyze_command.mjs  cli_args.mjs  cli_command_handlers.mjs  cli_context.mjs  cli_render.mjs  cli_support.mjs  common.mjs  completion_review.mjs  config.mjs  context.mjs  dashboard_command.mjs  dashboard_tui.mjs  dashboard_web.mjs  dashboard_web_client.css  dashboard_web_client.mjs  dashboard_web_client_app.mjs  dashboard_web_client_base.css  dashboard_web_client_components.css  dashboard_web_client_i18n.mjs  dashboard_web_client_layout.css  dashboard_web_client_locale_labels.mjs  dashboard_web_client_render.mjs  dashboard_web_client_render_parts.mjs  dashboard_web_client_render_shell.mjs  dashboard_web_client_render_views.mjs  dashboard_web_client_state.mjs  dashboard_web_client_state_defs.mjs  dashboard_web_client_state_format.mjs  dashboard_web_client_state_projectors.mjs  dashboard_web_client_state_tasks.mjs  (+58 more)
templates/: STATE.template.md  analysis-output.schema.json  backlog.template.json  policy.template.json  project.template.json  status.template.json  task-review-output.schema.json
tests/: analyze_cli.test.mjs  analyze_cli_path_resolution.test.mjs  analyze_intent_cli.test.mjs  analyze_runtime_failure.test.mjs  cli_doctor_surface.test.mjs  cli_surface.test.mjs  dashboard_web_page.test.mjs  engine_process_support.test.mjs  engine_selection_cli.test.mjs  engine_selection_runtime.test.mjs  hello_app_web_render.test.mjs  host_lifecycle_integrity.test.mjs  host_single_host_integrity.test.mjs  install_script.test.mjs  mainline_continuation.test.mjs  multi_host_runtime.test.mjs  multi_host_runtime_recovery.test.mjs  output_schema_contract.test.mjs  plugin_bundle.test.mjs  process_shell.test.mjs  prompt_guardrails.test.mjs  ralph_loop.test.mjs  runtime_recovery.test.mjs  status_model.test.mjs  supervisor_control.test.mjs  supervisor_runtime.test.mjs  supervisor_watch.test.mjs  terminal_session_limits.test.mjs  user_settings_lifecycle.test.mjs  workflow_model.test.mjs
tests/helpers/: analyze_cli_fixture.mjs  engine_selection_fixture.mjs  multi_host_runtime_fixture.mjs  supervisor_test_support.mjs
(+16 files in other folders)
