[package]
name = "hello-app-shell"
version = "0.11.0"
edition = "2024"
license = "Apache-2.0"
authors = ["HelloLoop"]
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
helloloop-runtime = { path = "../../../crates/helloloop-runtime" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tokio = { version = "1.47.1", features = ["process", "time"] }

[workspace]
